[package]
name = "darling-arch"
version = "0.1.1"
edition = "2021"
authors = ["Violet Iapalucci"]
license = "MIT"
description = "A darling implementation for Arch Linux's pacman."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
darling_packages = "0.1.0"
